--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -2304,11 +2304,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "columnsX = ['TempHighF',\n",
+    " 'TempLowF',\n",
+    " 'DewPointHighF',\n",
+    " 'DewPointAvgF',\n",
+    " 'DewPointLowF',\n",
+    " 'HumidityHighPercent',\n",
+    " 'HumidityAvgPercent',\n",
+    " 'HumidityLowPercent',\n",
+    " 'SeaLevelPressureHighInches',\n",
+    " 'SeaLevelPressureAvgInches',\n",
+    " 'SeaLevelPressureLowInches',\n",
+    " 'VisibilityHighMiles',\n",
+    " 'VisibilityAvgMiles',\n",
+    " 'VisibilityLowMiles',\n",
+    " 'WindHighMPH',\n",
+    " 'WindAvgMPH',\n",
+    " 'WindGustMPH',\n",
+    " 'Snow',\n",
+    " 'Fog',\n",
+    " 'Rain',\n",
+    " 'Thunderstorm']\n",
+    "\n",
+    "X = austin_fixed[columnsX]\n",
+    "y = austin_fixed['TempAvgF']\n"
    ]
   },
   {
@@ -2320,11 +2345,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -2339,11 +2366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here:\n"
+    "#Your code here:\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)"
    ]
   },
   {
@@ -2368,11 +2397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1056"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "ts_rows = round((80 * (austin_fixed.shape[0]) / 100) + 1) # + uno para que coja el número siguiente, porque era 1055.2\n",
+    "ts_rows "
    ]
   },
   {
@@ -2384,11 +2427,442 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>SeaLevelPressureHighInches</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>Snow</th>\n",
+       "      <th>Fog</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Thunderstorm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>74</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>29.86</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>58</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>30.56</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>61</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>30.56</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>58</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TempHighF  TempLowF  DewPointHighF  DewPointAvgF  DewPointLowF  \\\n",
+       "0         74        45           67.0          49.0          43.0   \n",
+       "1         56        39           43.0          36.0          28.0   \n",
+       "2         58        32           31.0          27.0          23.0   \n",
+       "3         61        31           36.0          28.0          21.0   \n",
+       "4         58        41           44.0          40.0          36.0   \n",
+       "\n",
+       "   HumidityHighPercent  HumidityAvgPercent  HumidityLowPercent  \\\n",
+       "0                 93.0                75.0                57.0   \n",
+       "1                 93.0                68.0                43.0   \n",
+       "2                 76.0                52.0                27.0   \n",
+       "3                 89.0                56.0                22.0   \n",
+       "4                 86.0                71.0                56.0   \n",
+       "\n",
+       "   SeaLevelPressureHighInches  SeaLevelPressureAvgInches      ...       \\\n",
+       "0                       29.86                      29.68      ...        \n",
+       "1                       30.41                      30.13      ...        \n",
+       "2                       30.56                      30.49      ...        \n",
+       "3                       30.56                      30.45      ...        \n",
+       "4                       30.41                      30.33      ...        \n",
+       "\n",
+       "   VisibilityHighMiles  VisibilityAvgMiles  VisibilityLowMiles  WindHighMPH  \\\n",
+       "0                 10.0                 7.0                 2.0         20.0   \n",
+       "1                 10.0                10.0                 5.0         16.0   \n",
+       "2                 10.0                10.0                10.0          8.0   \n",
+       "3                 10.0                10.0                 7.0         12.0   \n",
+       "4                 10.0                10.0                 7.0         10.0   \n",
+       "\n",
+       "   WindAvgMPH  WindGustMPH  Snow  Fog  Rain  Thunderstorm  \n",
+       "0         4.0         31.0     0    0     1             1  \n",
+       "1         6.0         25.0     0    0     0             0  \n",
+       "2         3.0         12.0     0    0     0             0  \n",
+       "3         4.0         20.0     0    0     0             0  \n",
+       "4         2.0         16.0     0    0     0             0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>SeaLevelPressureHighInches</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>Snow</th>\n",
+       "      <th>Fog</th>\n",
+       "      <th>Rain</th>\n",
+       "      <th>Thunderstorm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1056</th>\n",
+       "      <td>74</td>\n",
+       "      <td>55</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>30.31</td>\n",
+       "      <td>30.25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1057</th>\n",
+       "      <td>77</td>\n",
+       "      <td>57</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>30.28</td>\n",
+       "      <td>30.22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1058</th>\n",
+       "      <td>76</td>\n",
+       "      <td>54</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>30.18</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1059</th>\n",
+       "      <td>82</td>\n",
+       "      <td>56</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>30.15</td>\n",
+       "      <td>30.09</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1060</th>\n",
+       "      <td>86</td>\n",
+       "      <td>59</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>87.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>30.11</td>\n",
+       "      <td>30.04</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      TempHighF  TempLowF  DewPointHighF  DewPointAvgF  DewPointLowF  \\\n",
+       "1056         74        55           60.0          57.0          54.0   \n",
+       "1057         77        57           58.0          57.0          54.0   \n",
+       "1058         76        54           58.0          55.0          52.0   \n",
+       "1059         82        56           62.0          58.0          55.0   \n",
+       "1060         86        59           58.0          55.0          51.0   \n",
+       "\n",
+       "      HumidityHighPercent  HumidityAvgPercent  HumidityLowPercent  \\\n",
+       "1056                100.0                79.0                57.0   \n",
+       "1057                 93.0                72.0                50.0   \n",
+       "1058                 93.0                75.0                57.0   \n",
+       "1059                100.0                74.0                48.0   \n",
+       "1060                 87.0                60.0                32.0   \n",
+       "\n",
+       "      SeaLevelPressureHighInches  SeaLevelPressureAvgInches      ...       \\\n",
+       "1056                       30.31                      30.25      ...        \n",
+       "1057                       30.28                      30.22      ...        \n",
+       "1058                       30.27                      30.18      ...        \n",
+       "1059                       30.15                      30.09      ...        \n",
+       "1060                       30.11                      30.04      ...        \n",
+       "\n",
+       "      VisibilityHighMiles  VisibilityAvgMiles  VisibilityLowMiles  \\\n",
+       "1056                 10.0                 8.0                 2.0   \n",
+       "1057                 10.0                 8.0                 1.0   \n",
+       "1058                 10.0                10.0                 9.0   \n",
+       "1059                 10.0                 6.0                 0.0   \n",
+       "1060                 10.0                10.0                10.0   \n",
+       "\n",
+       "      WindHighMPH  WindAvgMPH  WindGustMPH  Snow  Fog  Rain  Thunderstorm  \n",
+       "1056          8.0         2.0         12.0     0    0     1             0  \n",
+       "1057          9.0         4.0         13.0     0    0     0             0  \n",
+       "1058          7.0         2.0         12.0     0    0     0             0  \n",
+       "1059          9.0         2.0         16.0     0    1     0             0  \n",
+       "1060          8.0         2.0         14.0     0    0     0             0  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "X_ts_train = X[:ts_rows] \n",
+    "X_ts_test = X[ts_rows:]\n",
+    "\n",
+    "display(X_ts_train.head())\n",
+    "display(X_ts_test.head())"
    ]
   },
   {
@@ -2400,11 +2874,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    60\n",
+       "1    48\n",
+       "2    45\n",
+       "3    46\n",
+       "4    50\n",
+       "Name: TempAvgF, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1056    65\n",
+       "1057    67\n",
+       "1058    65\n",
+       "1059    69\n",
+       "1060    73\n",
+       "Name: TempAvgF, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "y_ts_train = y[:ts_rows]\n",
+    "y_ts_test = y[ts_rows:]\n",
+    "\n",
+    "display(y_ts_train.head())\n",
+    "display(y_ts_test.head())"
    ]
   },
   {
