--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -5223,8 +5223,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Como el valor de Ratings es continuo y no discreto, tenemos que usar el SVR de Support Vector Machine"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -5785,13 +5792,17 @@
     "\n",
     "clf = svm.SVR()\n",
     "clf.fit(X_train, y_train)\n",
+    "\n",
     "clf.predict(X_test) - y_test\n",
+    "\n",
+    "# Tabla Error Difference\n",
+    "\n",
     "df1 = pd.DataFrame(np.array([clf.predict(X_test),y_test,clf.predict(X_test) - y_test]).T)\n",
     "df1.columns = ['Predicted Rating',\"GrounTruth\",\"Error Difference\"]\n",
-    "df2 = pd.DataFrame(np.abs(clf.predict(X_test) - y_test))\n",
     "\n",
-    "display(df1, df2.describe())\n",
-    "\n"
+    "df2 = pd.DataFrame(np.abs(clf.predict(X_test) - y_test)) # en números absolutos\n",
+    "\n",
+    "display(df1, df2.describe())\n"
    ]
   },
   {
@@ -5799,9 +5810,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.dtypes"
-   ]
+   "source": []
   }
  ],
  "metadata": {
