--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -4898,49 +4898,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Index(['Rating', 'Reviews', 'Price Numerical', 'Positive Ratio',\n",
-       "        'Action;Action & Adventure', 'Adventure', 'Arcade', 'Art & Design',\n",
-       "        'Art & Design;Creativity', 'Art & Design;Pretend Play',\n",
-       "        'Auto & Vehicles', 'Beauty', 'Board', 'Board;Brain Games',\n",
-       "        'Books & Reference', 'Business', 'Casual', 'Casual;Action & Adventure',\n",
-       "        'Casual;Brain Games', 'Casual;Creativity', 'Casual;Pretend Play',\n",
-       "        'Comics', 'Communication', 'Dating', 'Education', 'Education;Education',\n",
-       "        'Education;Pretend Play', 'Educational;Brain Games',\n",
-       "        'Educational;Creativity', 'Educational;Education',\n",
-       "        'Educational;Pretend Play', 'Entertainment',\n",
-       "        'Entertainment;Music & Video', 'Events', 'Finance', 'Food & Drink',\n",
-       "        'Health & Fitness', 'House & Home', 'Libraries & Demo', 'Lifestyle',\n",
-       "        'Maps & Navigation', 'Medical', 'News & Magazines', 'Parenting',\n",
-       "        'Parenting;Education', 'Parenting;Music & Video', 'Personalization',\n",
-       "        'Photography', 'Productivity', 'Puzzle', 'Puzzle;Action & Adventure',\n",
-       "        'Puzzle;Brain Games', 'Racing', 'Racing;Action & Adventure',\n",
-       "        'Role Playing', 'Role Playing;Action & Adventure',\n",
-       "        'Role Playing;Pretend Play', 'Shopping', 'Simulation',\n",
-       "        'Simulation;Action & Adventure', 'Simulation;Education',\n",
-       "        'Simulation;Pretend Play', 'Social', 'Sports',\n",
-       "        'Sports;Action & Adventure', 'Strategy', 'Tools', 'Travel & Local',\n",
-       "        'Travel & Local;Action & Adventure', 'Video Players & Editors',\n",
-       "        'Weather', 'Paid'],\n",
-       "       dtype='object'),\n",
-       " Int64Index([   0,    1,    2,    3,    4,    5,    6,    7,    8,    9,\n",
-       "             ...\n",
-       "             1218, 1219, 1220, 1221, 1222, 1223, 1224, 1225, 1226, 1227],\n",
-       "            dtype='int64', length=1228))"
+       "(1228, 72)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns, df.index\n"
+    "df.columns, df.index\n",
+    "df.shape"
    ]
   },
   {
@@ -5790,17 +5764,17 @@
    "source": [
     "from sklearn import svm\n",
     "\n",
-    "clf = svm.SVR()\n",
-    "clf.fit(X_train, y_train)\n",
+    "rgs = svm.SVR() \n",
+    "rgs.fit(X_train, y_train)\n",
     "\n",
-    "clf.predict(X_test) - y_test\n",
+    "rgs.predict(X_test) - y_test\n",
     "\n",
     "# Tabla Error Difference\n",
     "\n",
-    "df1 = pd.DataFrame(np.array([clf.predict(X_test),y_test,clf.predict(X_test) - y_test]).T)\n",
+    "df1 = pd.DataFrame(np.array([rgs.predict(X_test),y_test,rgs.predict(X_test) - y_test]).T)\n",
     "df1.columns = ['Predicted Rating',\"GrounTruth\",\"Error Difference\"]\n",
     "\n",
-    "df2 = pd.DataFrame(np.abs(clf.predict(X_test) - y_test)) # en números absolutos\n",
+    "df2 = pd.DataFrame(np.abs(rgs.predict(X_test) - y_test)) # en números absolutos\n",
     "\n",
     "display(df1, df2.describe())\n"
    ]
