--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -40,11 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "diabetes = datasets.load_diabetes()\n",
+    "#diabetes"
    ]
   },
   {
@@ -56,11 +61,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['data', 'target', 'DESCR', 'feature_names', 'data_filename', 'target_filename'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "diabetes.keys()"
    ]
   },
   {
@@ -76,13 +94,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _diabetes_dataset:\n",
+      "\n",
+      "Diabetes dataset\n",
+      "----------------\n",
+      "\n",
+      "Ten baseline variables, age, sex, body mass index, average blood\n",
+      "pressure, and six blood serum measurements were obtained for each of n =\n",
+      "442 diabetes patients, as well as the response of interest, a\n",
+      "quantitative measure of disease progression one year after baseline.\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "  :Number of Instances: 442\n",
+      "\n",
+      "  :Number of Attributes: First 10 columns are numeric predictive values\n",
+      "\n",
+      "  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\n",
+      "\n",
+      "  :Attribute Information:\n",
+      "      - Age\n",
+      "      - Sex\n",
+      "      - Body mass index\n",
+      "      - Average blood pressure\n",
+      "      - S1\n",
+      "      - S2\n",
+      "      - S3\n",
+      "      - S4\n",
+      "      - S5\n",
+      "      - S6\n",
+      "\n",
+      "Note: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\n",
+      "\n",
+      "Source URL:\n",
+      "http://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\n",
+      "\n",
+      "For more information see:\n",
+      "Bradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\n",
+      "(http://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "print(diabetes.DESCR)"
    ]
   },
   {
@@ -100,11 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter your answer here:\n"
+    "# 1-. En el dataset hay 10 atributos o feature variables\n",
+    "# 2-. Target es la columna 11, Column 11 is a quantitative measure of disease progression one year after baseline\n",
+    "# 3-. Number of Instances: 442\n"
    ]
   },
   {
@@ -118,11 +185,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(442, 10)\n",
+      "(442,)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "print(diabetes['data'].shape)\n",
+    "print(diabetes['target'].shape)\n",
+    "\n",
+    "# Es consistent con la descripción, target solo tiene 1 columna\n",
+    "# The data have already been split to predictor (data) and response (target) variables"
    ]
   },
   {
@@ -159,11 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "from sklearn import linear_model"
    ]
   },
   {
@@ -175,11 +259,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None,\n",
+       "         normalize=False)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "diabetes_model = linear_model.LinearRegression()\n",
+    "diabetes_model"
    ]
   },
   {
@@ -193,11 +292,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# No se puede hacer esto (train_test_split) porque nos hace el split de valores aleatorios y nos piden las últimas 20.\n",
+    "# Hay que hacerlo manual para seleccionar las últimas 20\n",
+    "\n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#diabetes_data_train, diabetes_data_test, diabetes_target_train, diabetes_target_test = train_test_split(X, y, test_size=0.20, random_state=42)\n",
+    "#print(diabetes_data_train.shape, diabetes_data_test.shape, diabetes_target_train.shape, diabetes_target_test.shape )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_data_train = diabetes['data'][:-20]\n",
+    "diabetes_target_train = diabetes['target'][:-20]\n",
+    "diabetes_data_test = diabetes['data'][-20:]\n",
+    "diabetes_target_test = diabetes['target'][-20:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5122262147793499"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diabetes_model.score(diabetes_data_train, diabetes_target_train)"
    ]
   },
   {
@@ -209,11 +346,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "152.76430691633442\n",
+      "[ 3.03499549e-01 -2.37639315e+02  5.10530605e+02  3.27736980e+02\n",
+      " -8.14131709e+02  4.92814588e+02  1.02848452e+02  1.84606489e+02\n",
+      "  7.43519617e+02  7.60951722e+01]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "diabetes_model.fit(diabetes_data_train, diabetes_target_train)\n",
+    "print(diabetes_model.intercept_)\n",
+    "print(diabetes_model.coef_)"
    ]
   },
   {
@@ -234,11 +386,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-99.69817439077895\n",
+      "[197.61846908 155.43979328 172.88665147 111.53537279 164.80054784\n",
+      " 131.06954875 259.12237761 100.47935157 117.0601052  124.30503555\n",
+      " 218.36632793  61.19831284 132.25046751 120.3332925   52.54458691\n",
+      " 194.03798088 102.57139702 123.56604987 211.0346317   52.60335674]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "v = np.sum(diabetes_data_test * diabetes_model.coef_) + diabetes_model.intercept_\n",
+    "print(v)\n",
+    "\n",
+    "vp = diabetes_model.predict(diabetes_data_test) # predicción de los últimos 20 del test\n",
+    "print(vp)"
    ]
   },
   {
@@ -250,11 +420,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Predicted Disease Progression</th>\n",
+       "      <th>GrounTruth</th>\n",
+       "      <th>Error Difference</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>197.618469</td>\n",
+       "      <td>233.0</td>\n",
+       "      <td>-35.381531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>155.439793</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>64.439793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>172.886651</td>\n",
+       "      <td>111.0</td>\n",
+       "      <td>61.886651</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>111.535373</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>-40.464627</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>164.800548</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>44.800548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>131.069549</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>64.069549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>259.122378</td>\n",
+       "      <td>310.0</td>\n",
+       "      <td>-50.877622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>100.479352</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>6.479352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>117.060105</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>-65.939895</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>124.305036</td>\n",
+       "      <td>66.0</td>\n",
+       "      <td>58.305036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>218.366328</td>\n",
+       "      <td>173.0</td>\n",
+       "      <td>45.366328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>61.198313</td>\n",
+       "      <td>72.0</td>\n",
+       "      <td>-10.801687</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>132.250468</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>83.250468</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>120.333292</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>56.333292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>52.544587</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>4.544587</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>194.037981</td>\n",
+       "      <td>178.0</td>\n",
+       "      <td>16.037981</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>102.571397</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>-1.428603</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>123.566050</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>-8.433950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>211.034632</td>\n",
+       "      <td>220.0</td>\n",
+       "      <td>-8.965368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>52.603357</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>-4.396643</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Predicted Disease Progression  GrounTruth  Error Difference\n",
+       "0                      197.618469       233.0        -35.381531\n",
+       "1                      155.439793        91.0         64.439793\n",
+       "2                      172.886651       111.0         61.886651\n",
+       "3                      111.535373       152.0        -40.464627\n",
+       "4                      164.800548       120.0         44.800548\n",
+       "5                      131.069549        67.0         64.069549\n",
+       "6                      259.122378       310.0        -50.877622\n",
+       "7                      100.479352        94.0          6.479352\n",
+       "8                      117.060105       183.0        -65.939895\n",
+       "9                      124.305036        66.0         58.305036\n",
+       "10                     218.366328       173.0         45.366328\n",
+       "11                      61.198313        72.0        -10.801687\n",
+       "12                     132.250468        49.0         83.250468\n",
+       "13                     120.333292        64.0         56.333292\n",
+       "14                      52.544587        48.0          4.544587\n",
+       "15                     194.037981       178.0         16.037981\n",
+       "16                     102.571397       104.0         -1.428603\n",
+       "17                     123.566050       132.0         -8.433950\n",
+       "18                     211.034632       220.0         -8.965368\n",
+       "19                      52.603357        57.0         -4.396643"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "df = pd.DataFrame(np.array([vp, diabetes_target_test, vp - diabetes_target_test]).T)\n",
+    "df.columns = ['Predicted Disease Progression',\"GrounTruth\",\"Error Difference\"]\n",
+    "df"
    ]
   },
   {
@@ -266,11 +620,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your explanation here:\n"
+    "# No!  Hay errores de hasta 80\n"
    ]
   },
   {
@@ -305,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
